--- a/css/recettes.css
+++ b/css/recettes.css
@@ -13,8 +13,19 @@ p { font-weight: 200; font-size: 16px;}
     display: grid;
 }
 
+.container__img-recette {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    overflow: hidden;
+}
 
+.img-recette {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 
+}
 
 
 .titre-recette {
@@ -400,10 +411,6 @@ input {
      }
 
 
-    .container-web-responsive {
-        display: block;
-    }
-
 
     /* position bouton portion responsive */
     .section-ingredient {
@@ -471,8 +478,6 @@ input {
      .page-container {
         grid-template-columns: 500px 1fr;
         column-gap: 50px;
-     }.container-web-responsive {
-        display: block;
      }
 
 
