--- a/css/recettes.css
+++ b/css/recettes.css
@@ -500,10 +500,10 @@ input {
         column-gap: 50px;        
      }
      .container__img-recette {
-        background-color:whitesmoke;
+        background-color: #F9F9F9;
      }
      .ingredients {
-        background-color:whitesmoke ;
+        background-color : #F9F9F9 ;
      }
 
 
