--- a/css/recettes.css
+++ b/css/recettes.css
@@ -1,10 +1,10 @@
-body { font-family: 'Open Sans', sans-serif; }
-h1 { color: #CB6863; font-weight: 700; font-size: 45px; }
+/* body { font-family: 'Open Sans', sans-serif; }
+h1 { font-weight: 700; font-size: 45px; }
 h2 { font-weight: 600; font-size: 30px;}
 h3 { font-weight: 500; font-size: 24px;}
 h4 { font-weight: 400; font-size: 16px;}
 h5 { color: #CB6863; font-weight: 700; font-size: 16px; }
-p { font-weight: 200; font-size: 16px;}
+p { font-weight: 200; font-size: 16px;} */
 
 .page-container {
     max-width: var(--page-max-width);
