--- a/css/recettes.css
+++ b/css/recettes.css
@@ -36,9 +36,13 @@ p { font-weight: 200; font-size: 16px;} */
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    height: 20px;
 }
 .bread-crumbs h6 {
     color: #a3a3a3;
+}
+.bread-crumbs__link {
+    cursor: pointer;
 }
 .bread-crumbs__link:hover h6 {
     color: #CB6863;
@@ -47,7 +51,7 @@ p { font-weight: 200; font-size: 16px;} */
 .titre-recette {
     text-align: center; /* Centre le texte */
     font-weight: bold; /* Rend le texte en gras */
-    padding: 50px 15px 15px 15px;
+    padding: 25px 15px 15px 15px;
     max-width: 100%;
     margin: 0;
     line-height: 1.4cap;
@@ -138,7 +142,7 @@ p2 {
     justify-content: center;
     height: auto;
     box-sizing: border-box;
-    padding: 25px 35px;
+    padding: 15px 35px;
 }
 
 
